# ai-component-library

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  storybook.yml
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/src/api/: main.py  models.py  stream.py
apps/demo/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/demo/src/app/: layout.tsx  page.tsx
apps/demo/src/lib/: fetchAdapter.ts
docs/: api-reference.md  architecture.md  data-flow.md
